Add more automation

--- a/espocrm.conf
+++ b/espocrm.conf
@@ -1,6 +1,8 @@
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+	listen 443 ssl;
+    listen [::]:443 ssl;
+
+	include snippets/self-signed.conf;
 
 	server_name DOMAIN_NAME;
 
@@ -71,4 +73,13 @@ server {
 		proxy_set_header Connection $connection_upgrade;
 		proxy_read_timeout 12h;
 	}
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name DOMAIN_NAME;
+
+    return 302 https://$server_name$request_uri;
 }
