Update to ubuntu 24.04 + add nginx and mariadb repos

--- a/espocrm-websocket.service
+++ b/espocrm-websocket.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=EspoCRM WebSocket Service
-Requires=mysql.service
-After=mysql.service
+Requires=mariadb.service
+After=mariadb.service
 StartLimitIntervalSec=0
 
 [Service]
